objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <description>dqsds</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geoloctest__c</fullName>
        <label>geoloctest</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>new_custom_in_std__c</fullName>
        <label>new custom in std</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_field_text__c</fullName>
        <label>new field text</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simple_texte2__c</fullName>
        <description>Réda</description>
        <inlineHelpText>qsdqsd</inlineHelpText>
        <label>simple texte2</label>
        <length>189</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_Hierarchy_Custom_setting__c</fullName>
        <formula>TEXT($Setup.Region__c.Discount__c) &amp; &quot; &quot; &amp; BR() &amp;
&quot; IS Admin: &quot; &amp; IF($Setup.Region__c.Is_Admin__c, &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test Hierarchy Custom setting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <description>test desc add</description>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_percent__c</fullName>
        <label>test percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>test_testarea_long__c</fullName>
        <label>test_tetarea_long</label>
        <length>35768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>test_textarea__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>test_textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>test_textarea_rich__c</fullName>
        <label>test_textarea_rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>testadd1__c</fullName>
        <label>testadd1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testadd2__c</fullName>
        <label>testadd2</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test_validation_rule_avcc</fullName>
        <active>false</active>
        <description>test2</description>
        <errorConditionFormula>true = true</errorConditionFormula>
        <errorMessage>err</errorMessage>
    </validationRules>
</CustomObject>